Avoid deprecated URL(String) constructor in GoogleCloudRunMetadata
new URL(String) is deprecated since Java 20 and fails the SDK's -Werror
build on newer JDKs (the Java 23 "Edge" CI job). Use URI.create(...).toURL()
instead, the recommended non-deprecated replacement (MalformedURLException
is still an IOException and stays caught).

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>